--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   playground:
-    container_name: "KAGGLE_TEMPLATE_v2"
+    container_name: "atma18"
     hostname: "python"
     build: .
     shm_size: "54gb"
