[exp_019] cnn, tune epoch, 0.2022

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -28,19 +28,25 @@ lightgbm:
 
 cnn:
   execution:
-    exp_id: exp_014
-    best_exp_id: exp_014
+    exp_id: exp_019
+    best_exp_id: exp_019
     seed: 46
   optimizer:
     lr: 0.01
     # weight_decay: 0.001
   trainer:
-    max_epoch: 20
+    max_epoch: 15
     es_patience: 20
     loss_window: 100000
     device: cuda
     monitor: valid_MeanAbsoluteError
     direction: minimize
+
+deberta:
+  execution:
+    exp_id: exp_018
+    best_exp_id: exp_018
+    seed: 46
 
 ensemble:
   execution:
